dynamic; everything working; can handle empty url (shows as failed); tests work in progress